[gd_scene load_steps=7 format=2]

[ext_resource path="res://Results.gd" type="Script" id=1]
[ext_resource path="res://images/logo-menu.png" type="Texture" id=2]
[ext_resource path="res://Montserrat-Medium.ttf" type="DynamicFontData" id=3]

[sub_resource type="DynamicFont" id=1]
size = 52
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=2]
size = 56
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=3]
size = 72
font_data = ExtResource( 3 )

[node name="Results" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_top = 80
custom_constants/margin_bottom = 40

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_top = 80.0
margin_right = 640.0
margin_bottom = 984.0
custom_constants/separation = 30

[node name="TextureRect" type="TextureRect" parent="MarginContainer/VBoxContainer"]
margin_right = 640.0
margin_bottom = 300.0
size_flags_horizontal = 3
texture = ExtResource( 2 )
stretch_mode = 6

[node name="EncouragementLabel" type="Label" parent="MarginContainer/VBoxContainer"]
margin_top = 330.0
margin_right = 640.0
margin_bottom = 395.0
size_flags_horizontal = 3
custom_fonts/font = SubResource( 1 )
text = "Bra jobbat!"
align = 1
valign = 1

[node name="ResultsLabel" type="Label" parent="MarginContainer/VBoxContainer"]
margin_top = 425.0
margin_right = 640.0
margin_bottom = 495.0
size_flags_horizontal = 3
custom_fonts/font = SubResource( 2 )
text = "27 rätt på 32 svar"
align = 1
valign = 1

[node name="Control" type="Control" parent="MarginContainer/VBoxContainer"]
margin_top = 525.0
margin_right = 640.0
margin_bottom = 779.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="BackButton" type="Button" parent="MarginContainer/VBoxContainer"]
margin_top = 809.0
margin_right = 640.0
margin_bottom = 904.0
focus_mode = 0
size_flags_horizontal = 3
custom_fonts/font = SubResource( 3 )
text = "VIEW_BACK"
flat = true
